# whatsapp-mcp

./: .env.example  .gitignore  =0.27.0  LICENSE  README.md  mcp_server.py  pyproject.toml  requirements.txt  run.sh  server.json
app/: agent.py  config.py  db.py  main.py  rewriter.py  scheduler.py  settings.py  store.py  tools.py  transcription.py
app/static/: index.html
bridge/: .gitignore  package-lock.json  package.json
bridge/src/: server.ts
installer/: install.sh  uninstall.sh
launcher/: tanu  tanu-menubar.py  wa  wa-menubar.py
src/whatsapp_mcp/: __init__.py  __main__.py  config.py  db.py  server.py  tools.py
voice/: assistant.py
