[project]
name = "whatsapp-mcp-macos"
version = "0.1.0"
description = "WhatsApp MCP Server for macOS - Connect Claude to your WhatsApp"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Krishna Paikine", email = "krishnapaikine777@gmail.com" }]
requires-python = ">=3.10"
keywords = ["whatsapp", "mcp", "claude", "anthropic", "ai", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/kalki-kgp/whatsapp-mcp"
Repository = "https://github.com/kalki-kgp/whatsapp-mcp"

[project.scripts]
whatsapp-mcp-macos = "whatsapp_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatsapp_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
